<resources>
    <string name="app_name">My repetition Foundation Application</string>
    <string name="text1">Hello World</string>
    <string name="btn1">Click here</string>
    <string name="button_text">Click Here to Share</string>
    <string name="checkBoxResultSender">Copy and Share?</string>
    <string name="textViewResultAct">No Data Received</string>
    <string name="shareText">Share via which messenger??? …</string>
    <string name="send_by_default_service">send by default service?</string>
    <string name="mark_as_Copied">\nSuccessfully Copied To Clipboard</string>
    <string name="copiedSucceededText">Copied Text Succeeded</string>
    <string name="switch_to_timer">Switch to Stopwatch</string>
    <string name="nullStopwatch">00:00:00</string>
    <string name="start">start</string>
    <string name="stop">pause</string>
    <string name="reset">reset</string>
    <string name="resume">resume</string>
</resources>