<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#83205A2A"
    tools:context=".resultPageActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#D397862E"
        android:backgroundTint="#8A3F3F"
        android:onClick="SendByMessangerOnClick"
        android:text="@string/button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.531" />

    <TextView
        android:id="@+id/textViewResultPageSender"
        android:layout_width="204dp"
        android:layout_height="59dp"
        android:allowUndo="false"

        android:background="#BAAEEA00"
        android:text="@string/textViewResultAct"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/checkBoxResultSender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.525" />

    <CheckBox
        android:id="@+id/checkBoxResultSender"
        android:layout_width="wrap_content"
        android:onClick="stateChanged"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:checked="@bool/choice1"
        android:text="@string/checkBoxResultSender"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.419"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.316" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="202dp"
        android:layout_height="55dp"
        android:layout_marginTop="12dp"
        android:checked="@bool/choice2"
        android:text="@string/send_by_default_service"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxResultSender"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>